--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -4,9 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/src/assets/PotesCafeLogoRounded.svg" />
-		<!-- <meta name="generator" content={Astro.generator} /> -->
-		<script src="https://kit.fontawesome.com/0be41fd53b.js" crossorigin="anonymous"></script>
-		<title>PotesCafe Links</title>
+		<title>PotesCafe</title>
 	</head>
 	<body>
 		<slot />
