ajout du lien castbox

--- a/src/components/Links.astro
+++ b/src/components/Links.astro
@@ -18,7 +18,7 @@ import {Icon} from 'astro-icon/components'
         <Icon id="LinksIcon" name="fadeezer"/>
         <h3 id="LinksName">Deezer</h3>
     </a>
-    <a id="castbox" href="https://www.youtube.com/@PotesCafe" target="_blank">
+    <a id="castbox" href="https://castbox.fm/channel/Potes-Cafe-id6363509?country=fr" target="_blank">
         <Icon id="LinksIcon" name="castbox"/>
         <h3 id="LinksName">Castbox</h3>
     </a>
