--- a/src/components/Links.astro
+++ b/src/components/Links.astro
@@ -57,6 +57,12 @@ import {Icon} from 'astro-icon/components'
         box-shadow: var(--shadow);
     }
 
+    @media screen and (min-width: 768px) {
+        a{
+            width: 50vw;
+        }
+    }
+
     a:hover{
         transform: scale(1.1);
         box-shadow: var(--shadow-hover);
