Adaptation du site au design de la saison 2

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,14 +1,14 @@
 ---
 import { Image } from 'astro:assets';
-import PotesCafeLogo from '../assets/PotesCafeLogo.svg';
+import PotesCafeLogo from '../assets/PotesCaf\'Logo.svg';
 ---
 
 <header>
 	<Image id="logo" src={PotesCafeLogo} alt="Image de Potes Cafe" />
 	<div class="intro">
-		<h1>Potes Cafe</h1>
+		<h1>Potes Caf'</h1>
 		<div class="bio">
-			<p>Des potes qui parlent de culture autour d'une œuvre en particulier dans chaque épisode.</p>
+			<p>Des potes qui parlent de culture autour d'un café ☕</p>
 		</div>
 	</div>
 </header>
