--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,8 +3,8 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/src/assets/PotesCafeLogoRounded.svg" />
-		<title>PotesCafe</title>
+		<link rel="icon" type="image/svg+xml" href="/src/assets/PotesCaf'LogoRounded.svg" />
+		<title>Potes Caf'</title>
 	</head>
 	<body>
 		<slot />
@@ -19,7 +19,8 @@
 		width: 100vW;
 		height: 100vh;
 		font-family: var(--MPCL);
-		background-image: url(/src/assets/bg.svg);
+		/* background-color: var(--background-color); */
+		background-image: linear-gradient(rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)),url(/src/assets/bgB.jpg);
 		background-size: cover;
     	background-position: center;
     	background-repeat: no-repeat;
