--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -12,7 +12,7 @@
     }
 
     a{
-        color: #424242;
+        color: var(--footer-color);
         font-family: var(--Exo2);
         font-size: small;
         font-weight: bold;
