--- a/src/components/Links.astro
+++ b/src/components/Links.astro
@@ -15,7 +15,7 @@ import {Icon} from 'astro-icon/components'
         <h3 id="LinksName">Spotify</h3>
     </a>
     <a id="deezer" href="https://www.deezer.com/fr/show/1001428351" target="_blank">
-        <Icon id="LinksIcon" name="fadeezer"/>
+        <Icon id="LinksIcon" name="deezer"/>
         <h3 id="LinksName">Deezer</h3>
     </a>
     <a id="castbox" href="https://castbox.fm/channel/Potes-Cafe-id6363509?country=fr" target="_blank">
